--- a/h-vue/static/less/style.less
+++ b/h-vue/static/less/style.less
@@ -6,4 +6,18 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  --color-primary:#2d8cf0;
+  --color-light-primary:#5cadff;
+  --color-dark-primary:#2b85e4;
+  --color-title:#1c2438;
+  --color-content:#495060;
+  --color-subcolor:#80848f;
+  --color-disabled:#bbbec4;
+  --color-border:#dddee1;
+  --color-divider:#e9eaec;
+  --color-bg:#f8f8f9;
+  --color-info:#2d8cf0;
+  --color-success:#19be6b;
+  --color-warning:#ff9900;
+  --color-error:#ed3f14;
 }
